--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@heroicons/react": "^2.1.3",
     "@prisma/client": "3.15.2",
     "@tailwindcss/forms": "^0.5.7",
+    "@types/bcrypt": "^5.0.2",
     "@types/node": "18.0.0",
     "@types/react": "18.0.14",
     "@types/react-dom": "18.0.5",
     "autoprefixer": "10.4.7",
+    "bcrypt": "^5.1.1",
     "next": "12.1.6",
     "postcss": "8.4.14",
     "prisma": "3.15.2",
